--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "git-do": "git add . && git commit -m '${GIT_MSG}' && git push",
     "git-it" : "git add . && git commit -m $npm_config_msg && git push",
     "say-it" : "echo \" $npm_config_first\"",
-    "demo": "echo \"git add . && git commit -m $npm_config_first && git push\""
+    "demo": "git add . && git commit -m $npm_config_first && git push"
     
   },
   "repository": {
